--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=validate
 liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/tasktest
+spring.datasource.url=jdbc:postgresql://localhost:5432/juli
 spring.datasource.username=postgres
 spring.datasource.password=Zaq12wsx
 
